// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots BookItem Default 1`] = `
<div
  className="css-1kcrdz9"
>
  <div
    className="css-p0qa9v"
  >
    <img
      alt=""
      className="css-1e33sef"
    />
  </div>
  <div
    className="css-1ezsse0"
  >
    <h3
      className="css-1xf94ta"
    >
      <strong>
        Learning React
      </strong>
      : Functional Web Development with React and Redux
    </h3>
    <p
      className="css-5k86z4"
    >
      Alex Banks, Eve Porcello
    </p>
    <div
      className="css-u4p24i"
    >
      <svg
        className="css-5i7nil"
        focusable={false}
        role="presentation"
        viewBox="0 0 24 24"
      >
        <path
          d="M23.555,8.729a1.505,1.505,0,0,0-1.406-.98H16.062a.5.5,0,0,1-.472-.334L13.405,1.222a1.5,1.5,0,0,0-2.81,0l-.005.016L8.41,7.415a.5.5,0,0,1-.471.334H1.85A1.5,1.5,0,0,0,.887,10.4l5.184,4.3a.5.5,0,0,1,.155.543L4.048,21.774a1.5,1.5,0,0,0,2.31,1.684l5.346-3.92a.5.5,0,0,1,.591,0l5.344,3.919a1.5,1.5,0,0,0,2.312-1.683l-2.178-6.535a.5.5,0,0,1,.155-.543l5.194-4.306A1.5,1.5,0,0,0,23.555,8.729Z"
          fill="currentColor"
        />
      </svg>
      <p
        className="css-141x2iq"
      >
        5.00
      </p>
      <p
        className="css-pur3hh"
      >
        (1 ratings)
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots BookItem Loading 1`] = `
<div
  className="css-1kcrdz9"
>
  <div
    className="css-p0qa9v"
  />
  <div
    className="css-1ezsse0"
  >
    <div
      className="css-1kppp1y"
    />
    <div
      className="css-g7qeeo"
    />
    <div
      className="css-g7qeeo"
    />
  </div>
</div>
`;

exports[`Storyshots BookList Loaded 1`] = `
<ul
  className="css-1ejed6n"
>
  <li
    className="css-1bv9c6y"
    data-testid="book-item"
  >
    <div
      className="css-1kcrdz9"
    >
      <div
        className="css-p0qa9v"
      >
        <img
          alt=""
          className="css-1e33sef"
        />
      </div>
      <div
        className="css-1ezsse0"
      >
        <h3
          className="css-1xf94ta"
        >
          <strong>
            Learning React
          </strong>
          : Functional Web Development with React and Redux
        </h3>
        <p
          className="css-5k86z4"
        >
          Alex Banks, Eve Porcello
        </p>
        <div
          className="css-u4p24i"
        >
          <svg
            className="css-5i7nil"
            focusable={false}
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M23.555,8.729a1.505,1.505,0,0,0-1.406-.98H16.062a.5.5,0,0,1-.472-.334L13.405,1.222a1.5,1.5,0,0,0-2.81,0l-.005.016L8.41,7.415a.5.5,0,0,1-.471.334H1.85A1.5,1.5,0,0,0,.887,10.4l5.184,4.3a.5.5,0,0,1,.155.543L4.048,21.774a1.5,1.5,0,0,0,2.31,1.684l5.346-3.92a.5.5,0,0,1,.591,0l5.344,3.919a1.5,1.5,0,0,0,2.312-1.683l-2.178-6.535a.5.5,0,0,1,.155-.543l5.194-4.306A1.5,1.5,0,0,0,23.555,8.729Z"
              fill="currentColor"
            />
          </svg>
          <p
            className="css-141x2iq"
          >
            5.00
          </p>
          <p
            className="css-pur3hh"
          >
            (1 ratings)
          </p>
        </div>
      </div>
    </div>
  </li>
  <li
    className="css-1bv9c6y"
    data-testid="book-item"
  >
    <div
      className="css-1kcrdz9"
    >
      <div
        className="css-p0qa9v"
      >
        <img
          alt=""
          className="css-1e33sef"
        />
      </div>
      <div
        className="css-1ezsse0"
      >
        <h3
          className="css-1xf94ta"
        >
          <strong>
            Mastering React
          </strong>
        </h3>
        <p
          className="css-5k86z4"
        >
          Adam Horton, Ryan Vice
        </p>
      </div>
    </div>
  </li>
  <li
    className="css-1bv9c6y"
    data-testid="book-item"
  >
    <div
      className="css-1kcrdz9"
    >
      <div
        className="css-p0qa9v"
      >
        <img
          alt=""
          className="css-1e33sef"
        />
      </div>
      <div
        className="css-1ezsse0"
      >
        <h3
          className="css-1xf94ta"
        >
          <strong>
            React.js Essentials
          </strong>
        </h3>
        <p
          className="css-5k86z4"
        >
          Artemij Fedosejev
        </p>
      </div>
    </div>
  </li>
  <li
    className="css-1bv9c6y"
    data-testid="book-item"
  >
    <div
      className="css-1kcrdz9"
    >
      <div
        className="css-p0qa9v"
      >
        <img
          alt=""
          className="css-1e33sef"
        />
      </div>
      <div
        className="css-1ezsse0"
      >
        <h3
          className="css-1xf94ta"
        >
          <strong>
            Mastering React Native
          </strong>
        </h3>
        <p
          className="css-5k86z4"
        >
          Eric Masiello, Jacob Friedmann
        </p>
      </div>
    </div>
  </li>
  <li
    className="css-1bv9c6y"
    data-testid="book-item"
  >
    <div
      className="css-1kcrdz9"
    >
      <div
        className="css-p0qa9v"
      >
        <img
          alt=""
          className="css-1e33sef"
        />
      </div>
      <div
        className="css-1ezsse0"
      >
        <h3
          className="css-1xf94ta"
        >
          <strong>
            Introduction to React
          </strong>
        </h3>
        <p
          className="css-5k86z4"
        >
          Cory Gackenheimer
        </p>
      </div>
    </div>
  </li>
  <li
    className="css-1bv9c6y"
    data-testid="book-item"
  >
    <div
      className="css-1kcrdz9"
    >
      <div
        className="css-p0qa9v"
      >
        <img
          alt=""
          className="css-1e33sef"
        />
      </div>
      <div
        className="css-1ezsse0"
      >
        <h3
          className="css-1xf94ta"
        >
          <strong>
            React Projects
          </strong>
          : Build 12 real-world applications from scratch using React, React Native, and React 360
        </h3>
        <p
          className="css-5k86z4"
        >
          Roy Derks
        </p>
      </div>
    </div>
  </li>
  <li
    className="css-1bv9c6y"
    data-testid="book-item"
  >
    <div
      className="css-1kcrdz9"
    >
      <div
        className="css-p0qa9v"
      >
        <img
          alt=""
          className="css-1e33sef"
        />
      </div>
      <div
        className="css-1ezsse0"
      >
        <h3
          className="css-1xf94ta"
        >
          <strong>
            React
          </strong>
        </h3>
        <p
          className="css-5k86z4"
        >
          Jacob Dotson
        </p>
        <div
          className="css-u4p24i"
        >
          <svg
            className="css-5i7nil"
            focusable={false}
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M23.555,8.729a1.505,1.505,0,0,0-1.406-.98H16.062a.5.5,0,0,1-.472-.334L13.405,1.222a1.5,1.5,0,0,0-2.81,0l-.005.016L8.41,7.415a.5.5,0,0,1-.471.334H1.85A1.5,1.5,0,0,0,.887,10.4l5.184,4.3a.5.5,0,0,1,.155.543L4.048,21.774a1.5,1.5,0,0,0,2.31,1.684l5.346-3.92a.5.5,0,0,1,.591,0l5.344,3.919a1.5,1.5,0,0,0,2.312-1.683l-2.178-6.535a.5.5,0,0,1,.155-.543l5.194-4.306A1.5,1.5,0,0,0,23.555,8.729Z"
              fill="currentColor"
            />
          </svg>
          <p
            className="css-141x2iq"
          >
            5.00
          </p>
          <p
            className="css-pur3hh"
          >
            (1 ratings)
          </p>
        </div>
      </div>
    </div>
  </li>
  <li
    className="css-1bv9c6y"
    data-testid="book-item"
  >
    <div
      className="css-1kcrdz9"
    >
      <div
        className="css-p0qa9v"
      >
        <img
          alt=""
          className="css-1e33sef"
        />
      </div>
      <div
        className="css-1ezsse0"
      >
        <h3
          className="css-1xf94ta"
        >
          <strong>
            REACT
          </strong>
        </h3>
        <p
          className="css-5k86z4"
        >
          Tobi Nifesi
        </p>
      </div>
    </div>
  </li>
  <li
    className="css-1bv9c6y"
    data-testid="book-item"
  >
    <div
      className="css-1kcrdz9"
    >
      <div
        className="css-p0qa9v"
      >
        <img
          alt=""
          className="css-1e33sef"
        />
      </div>
      <div
        className="css-1ezsse0"
      >
        <h3
          className="css-1xf94ta"
        >
          <strong>
            Designing Applications with Spring Boot 2.2 and React JS
          </strong>
          : Step-by-step guide to design and develop intuitive full stack web applications
        </h3>
        <p
          className="css-5k86z4"
        >
          Dinesh Rajput 
        </p>
      </div>
    </div>
  </li>
  <li
    className="css-1bv9c6y"
    data-testid="book-item"
  >
    <div
      className="css-1kcrdz9"
    >
      <div
        className="css-p0qa9v"
      >
        <img
          alt=""
          className="css-1e33sef"
        />
      </div>
      <div
        className="css-1ezsse0"
      >
        <h3
          className="css-1xf94ta"
        >
          <strong>
            React Native for Mobile Development
          </strong>
          : Harness the Power of React Native to Create Stunning iOS and Android Applications
        </h3>
        <p
          className="css-5k86z4"
        >
          Akshat Paul, Abhishek Nalwaya
        </p>
      </div>
    </div>
  </li>
  <li
    className="css-1bv9c6y"
    data-testid="book-item"
  >
    <div
      className="css-1kcrdz9"
    >
      <div
        className="css-p0qa9v"
      >
        <img
          alt=""
          className="css-1e33sef"
        />
      </div>
      <div
        className="css-1ezsse0"
      >
        <h3
          className="css-1xf94ta"
        >
          <strong>
            The Must-React System
          </strong>
        </h3>
        <p
          className="css-5k86z4"
        >
          Kraig Kleeman
        </p>
      </div>
    </div>
  </li>
  <li
    className="css-1bv9c6y"
    data-testid="book-item"
  >
    <div
      className="css-1kcrdz9"
    >
      <div
        className="css-p0qa9v"
      >
        <img
          alt=""
          className="css-1e33sef"
        />
      </div>
      <div
        className="css-1ezsse0"
      >
        <h3
          className="css-1xf94ta"
        >
          <strong>
            Think, Act, Stay Safe with the R.E.A.C.T Approach to Self Defence
          </strong>
        </h3>
        <p
          className="css-5k86z4"
        >
          Stephen W. Collins
        </p>
      </div>
    </div>
  </li>
</ul>
`;

exports[`Storyshots BookList Loading 1`] = `
<ul
  className="css-1ejed6n"
>
  <li
    className="css-1bv9c6y"
  >
    <div
      className="css-1kcrdz9"
    >
      <div
        className="css-p0qa9v"
      />
      <div
        className="css-1ezsse0"
      >
        <div
          className="css-1kppp1y"
        />
        <div
          className="css-g7qeeo"
        />
        <div
          className="css-g7qeeo"
        />
      </div>
    </div>
  </li>
  <li
    className="css-1bv9c6y"
  >
    <div
      className="css-1kcrdz9"
    >
      <div
        className="css-p0qa9v"
      />
      <div
        className="css-1ezsse0"
      >
        <div
          className="css-1kppp1y"
        />
        <div
          className="css-g7qeeo"
        />
        <div
          className="css-g7qeeo"
        />
      </div>
    </div>
  </li>
  <li
    className="css-1bv9c6y"
  >
    <div
      className="css-1kcrdz9"
    >
      <div
        className="css-p0qa9v"
      />
      <div
        className="css-1ezsse0"
      >
        <div
          className="css-1kppp1y"
        />
        <div
          className="css-g7qeeo"
        />
        <div
          className="css-g7qeeo"
        />
      </div>
    </div>
  </li>
  <li
    className="css-1bv9c6y"
  >
    <div
      className="css-1kcrdz9"
    >
      <div
        className="css-p0qa9v"
      />
      <div
        className="css-1ezsse0"
      >
        <div
          className="css-1kppp1y"
        />
        <div
          className="css-g7qeeo"
        />
        <div
          className="css-g7qeeo"
        />
      </div>
    </div>
  </li>
  <li
    className="css-1bv9c6y"
  >
    <div
      className="css-1kcrdz9"
    >
      <div
        className="css-p0qa9v"
      />
      <div
        className="css-1ezsse0"
      >
        <div
          className="css-1kppp1y"
        />
        <div
          className="css-g7qeeo"
        />
        <div
          className="css-g7qeeo"
        />
      </div>
    </div>
  </li>
  <li
    className="css-1bv9c6y"
  >
    <div
      className="css-1kcrdz9"
    >
      <div
        className="css-p0qa9v"
      />
      <div
        className="css-1ezsse0"
      >
        <div
          className="css-1kppp1y"
        />
        <div
          className="css-g7qeeo"
        />
        <div
          className="css-g7qeeo"
        />
      </div>
    </div>
  </li>
  <li
    className="css-1bv9c6y"
  >
    <div
      className="css-1kcrdz9"
    >
      <div
        className="css-p0qa9v"
      />
      <div
        className="css-1ezsse0"
      >
        <div
          className="css-1kppp1y"
        />
        <div
          className="css-g7qeeo"
        />
        <div
          className="css-g7qeeo"
        />
      </div>
    </div>
  </li>
  <li
    className="css-1bv9c6y"
  >
    <div
      className="css-1kcrdz9"
    >
      <div
        className="css-p0qa9v"
      />
      <div
        className="css-1ezsse0"
      >
        <div
          className="css-1kppp1y"
        />
        <div
          className="css-g7qeeo"
        />
        <div
          className="css-g7qeeo"
        />
      </div>
    </div>
  </li>
  <li
    className="css-1bv9c6y"
  >
    <div
      className="css-1kcrdz9"
    >
      <div
        className="css-p0qa9v"
      />
      <div
        className="css-1ezsse0"
      >
        <div
          className="css-1kppp1y"
        />
        <div
          className="css-g7qeeo"
        />
        <div
          className="css-g7qeeo"
        />
      </div>
    </div>
  </li>
  <li
    className="css-1bv9c6y"
  >
    <div
      className="css-1kcrdz9"
    >
      <div
        className="css-p0qa9v"
      />
      <div
        className="css-1ezsse0"
      >
        <div
          className="css-1kppp1y"
        />
        <div
          className="css-g7qeeo"
        />
        <div
          className="css-g7qeeo"
        />
      </div>
    </div>
  </li>
  <li
    className="css-1bv9c6y"
  >
    <div
      className="css-1kcrdz9"
    >
      <div
        className="css-p0qa9v"
      />
      <div
        className="css-1ezsse0"
      >
        <div
          className="css-1kppp1y"
        />
        <div
          className="css-g7qeeo"
        />
        <div
          className="css-g7qeeo"
        />
      </div>
    </div>
  </li>
  <li
    className="css-1bv9c6y"
  >
    <div
      className="css-1kcrdz9"
    >
      <div
        className="css-p0qa9v"
      />
      <div
        className="css-1ezsse0"
      >
        <div
          className="css-1kppp1y"
        />
        <div
          className="css-g7qeeo"
        />
        <div
          className="css-g7qeeo"
        />
      </div>
    </div>
  </li>
</ul>
`;

exports[`Storyshots BooksPage Idle 1`] = `
<div
  className="css-1h5u2ui"
>
  <div
    className="css-1eofdow"
  >
    <a
      className="css-7kntnf"
    >
      favbook
    </a>
    <div
      className="css-101p9t7"
    >
      <form
        className="css-kjafn5"
        onSubmit={[Function]}
      >
        <input
          className="css-1ohh5ys"
          onChange={[Function]}
          placeholder="Search"
        />
        <div
          className="css-mczi6p"
        >
          <button
            aria-label="Search"
            className="css-12ol5rm"
            type="submit"
          >
            <svg
              aria-hidden={true}
              className="css-1im46kq"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M23.384,21.619,16.855,15.09a9.284,9.284,0,1,0-1.768,1.768l6.529,6.529a1.266,1.266,0,0,0,1.768,0A1.251,1.251,0,0,0,23.384,21.619ZM2.75,9.5a6.75,6.75,0,1,1,6.75,6.75A6.758,6.758,0,0,1,2.75,9.5Z"
                fill="currentColor"
              />
            </svg>
          </button>
        </div>
      </form>
    </div>
  </div>
  <main
    className="css-0"
  >
    <div
      className="css-ps5qvu"
    >
      <ul
        className="css-1ejed6n"
      />
    </div>
  </main>
</div>
`;

exports[`Storyshots BooksPage Loaded 1`] = `
<div
  className="css-1h5u2ui"
>
  <div
    className="css-jfx3a"
  >
    <a
      className="css-1iuyfm8"
    >
      favbook
    </a>
    <div
      className="css-47wyri"
    >
      <form
        className="css-kjafn5"
        onSubmit={[Function]}
      >
        <input
          className="css-1ohh5ys"
          onChange={[Function]}
          placeholder="Search"
        />
        <div
          className="css-mczi6p"
        >
          <button
            aria-label="Search"
            className="css-12ol5rm"
            type="submit"
          >
            <svg
              aria-hidden={true}
              className="css-1im46kq"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M23.384,21.619,16.855,15.09a9.284,9.284,0,1,0-1.768,1.768l6.529,6.529a1.266,1.266,0,0,0,1.768,0A1.251,1.251,0,0,0,23.384,21.619ZM2.75,9.5a6.75,6.75,0,1,1,6.75,6.75A6.758,6.758,0,0,1,2.75,9.5Z"
                fill="currentColor"
              />
            </svg>
          </button>
        </div>
      </form>
    </div>
  </div>
  <main
    className="css-0"
  >
    <div
      className="css-ps5qvu"
    >
      <ul
        className="css-1ejed6n"
      >
        <li
          className="css-1bv9c6y"
          data-testid="book-item"
        >
          <div
            className="css-1kcrdz9"
          >
            <div
              className="css-p0qa9v"
            >
              <img
                alt=""
                className="css-1e33sef"
              />
            </div>
            <div
              className="css-1ezsse0"
            >
              <h3
                className="css-1xf94ta"
              >
                <strong>
                  Learning React
                </strong>
                : Functional Web Development with React and Redux
              </h3>
              <p
                className="css-5k86z4"
              >
                Alex Banks, Eve Porcello
              </p>
              <div
                className="css-u4p24i"
              >
                <svg
                  className="css-5i7nil"
                  focusable={false}
                  role="presentation"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M23.555,8.729a1.505,1.505,0,0,0-1.406-.98H16.062a.5.5,0,0,1-.472-.334L13.405,1.222a1.5,1.5,0,0,0-2.81,0l-.005.016L8.41,7.415a.5.5,0,0,1-.471.334H1.85A1.5,1.5,0,0,0,.887,10.4l5.184,4.3a.5.5,0,0,1,.155.543L4.048,21.774a1.5,1.5,0,0,0,2.31,1.684l5.346-3.92a.5.5,0,0,1,.591,0l5.344,3.919a1.5,1.5,0,0,0,2.312-1.683l-2.178-6.535a.5.5,0,0,1,.155-.543l5.194-4.306A1.5,1.5,0,0,0,23.555,8.729Z"
                    fill="currentColor"
                  />
                </svg>
                <p
                  className="css-141x2iq"
                >
                  5.00
                </p>
                <p
                  className="css-pur3hh"
                >
                  (1 ratings)
                </p>
              </div>
            </div>
          </div>
        </li>
        <li
          className="css-1bv9c6y"
          data-testid="book-item"
        >
          <div
            className="css-1kcrdz9"
          >
            <div
              className="css-p0qa9v"
            >
              <img
                alt=""
                className="css-1e33sef"
              />
            </div>
            <div
              className="css-1ezsse0"
            >
              <h3
                className="css-1xf94ta"
              >
                <strong>
                  Mastering React
                </strong>
              </h3>
              <p
                className="css-5k86z4"
              >
                Adam Horton, Ryan Vice
              </p>
            </div>
          </div>
        </li>
        <li
          className="css-1bv9c6y"
          data-testid="book-item"
        >
          <div
            className="css-1kcrdz9"
          >
            <div
              className="css-p0qa9v"
            >
              <img
                alt=""
                className="css-1e33sef"
              />
            </div>
            <div
              className="css-1ezsse0"
            >
              <h3
                className="css-1xf94ta"
              >
                <strong>
                  React.js Essentials
                </strong>
              </h3>
              <p
                className="css-5k86z4"
              >
                Artemij Fedosejev
              </p>
            </div>
          </div>
        </li>
        <li
          className="css-1bv9c6y"
          data-testid="book-item"
        >
          <div
            className="css-1kcrdz9"
          >
            <div
              className="css-p0qa9v"
            >
              <img
                alt=""
                className="css-1e33sef"
              />
            </div>
            <div
              className="css-1ezsse0"
            >
              <h3
                className="css-1xf94ta"
              >
                <strong>
                  Mastering React Native
                </strong>
              </h3>
              <p
                className="css-5k86z4"
              >
                Eric Masiello, Jacob Friedmann
              </p>
            </div>
          </div>
        </li>
        <li
          className="css-1bv9c6y"
          data-testid="book-item"
        >
          <div
            className="css-1kcrdz9"
          >
            <div
              className="css-p0qa9v"
            >
              <img
                alt=""
                className="css-1e33sef"
              />
            </div>
            <div
              className="css-1ezsse0"
            >
              <h3
                className="css-1xf94ta"
              >
                <strong>
                  Introduction to React
                </strong>
              </h3>
              <p
                className="css-5k86z4"
              >
                Cory Gackenheimer
              </p>
            </div>
          </div>
        </li>
        <li
          className="css-1bv9c6y"
          data-testid="book-item"
        >
          <div
            className="css-1kcrdz9"
          >
            <div
              className="css-p0qa9v"
            >
              <img
                alt=""
                className="css-1e33sef"
              />
            </div>
            <div
              className="css-1ezsse0"
            >
              <h3
                className="css-1xf94ta"
              >
                <strong>
                  React Projects
                </strong>
                : Build 12 real-world applications from scratch using React, React Native, and React 360
              </h3>
              <p
                className="css-5k86z4"
              >
                Roy Derks
              </p>
            </div>
          </div>
        </li>
        <li
          className="css-1bv9c6y"
          data-testid="book-item"
        >
          <div
            className="css-1kcrdz9"
          >
            <div
              className="css-p0qa9v"
            >
              <img
                alt=""
                className="css-1e33sef"
              />
            </div>
            <div
              className="css-1ezsse0"
            >
              <h3
                className="css-1xf94ta"
              >
                <strong>
                  React
                </strong>
              </h3>
              <p
                className="css-5k86z4"
              >
                Jacob Dotson
              </p>
              <div
                className="css-u4p24i"
              >
                <svg
                  className="css-5i7nil"
                  focusable={false}
                  role="presentation"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M23.555,8.729a1.505,1.505,0,0,0-1.406-.98H16.062a.5.5,0,0,1-.472-.334L13.405,1.222a1.5,1.5,0,0,0-2.81,0l-.005.016L8.41,7.415a.5.5,0,0,1-.471.334H1.85A1.5,1.5,0,0,0,.887,10.4l5.184,4.3a.5.5,0,0,1,.155.543L4.048,21.774a1.5,1.5,0,0,0,2.31,1.684l5.346-3.92a.5.5,0,0,1,.591,0l5.344,3.919a1.5,1.5,0,0,0,2.312-1.683l-2.178-6.535a.5.5,0,0,1,.155-.543l5.194-4.306A1.5,1.5,0,0,0,23.555,8.729Z"
                    fill="currentColor"
                  />
                </svg>
                <p
                  className="css-141x2iq"
                >
                  5.00
                </p>
                <p
                  className="css-pur3hh"
                >
                  (1 ratings)
                </p>
              </div>
            </div>
          </div>
        </li>
        <li
          className="css-1bv9c6y"
          data-testid="book-item"
        >
          <div
            className="css-1kcrdz9"
          >
            <div
              className="css-p0qa9v"
            >
              <img
                alt=""
                className="css-1e33sef"
              />
            </div>
            <div
              className="css-1ezsse0"
            >
              <h3
                className="css-1xf94ta"
              >
                <strong>
                  REACT
                </strong>
              </h3>
              <p
                className="css-5k86z4"
              >
                Tobi Nifesi
              </p>
            </div>
          </div>
        </li>
        <li
          className="css-1bv9c6y"
          data-testid="book-item"
        >
          <div
            className="css-1kcrdz9"
          >
            <div
              className="css-p0qa9v"
            >
              <img
                alt=""
                className="css-1e33sef"
              />
            </div>
            <div
              className="css-1ezsse0"
            >
              <h3
                className="css-1xf94ta"
              >
                <strong>
                  Designing Applications with Spring Boot 2.2 and React JS
                </strong>
                : Step-by-step guide to design and develop intuitive full stack web applications
              </h3>
              <p
                className="css-5k86z4"
              >
                Dinesh Rajput 
              </p>
            </div>
          </div>
        </li>
        <li
          className="css-1bv9c6y"
          data-testid="book-item"
        >
          <div
            className="css-1kcrdz9"
          >
            <div
              className="css-p0qa9v"
            >
              <img
                alt=""
                className="css-1e33sef"
              />
            </div>
            <div
              className="css-1ezsse0"
            >
              <h3
                className="css-1xf94ta"
              >
                <strong>
                  React Native for Mobile Development
                </strong>
                : Harness the Power of React Native to Create Stunning iOS and Android Applications
              </h3>
              <p
                className="css-5k86z4"
              >
                Akshat Paul, Abhishek Nalwaya
              </p>
            </div>
          </div>
        </li>
        <li
          className="css-1bv9c6y"
          data-testid="book-item"
        >
          <div
            className="css-1kcrdz9"
          >
            <div
              className="css-p0qa9v"
            >
              <img
                alt=""
                className="css-1e33sef"
              />
            </div>
            <div
              className="css-1ezsse0"
            >
              <h3
                className="css-1xf94ta"
              >
                <strong>
                  The Must-React System
                </strong>
              </h3>
              <p
                className="css-5k86z4"
              >
                Kraig Kleeman
              </p>
            </div>
          </div>
        </li>
        <li
          className="css-1bv9c6y"
          data-testid="book-item"
        >
          <div
            className="css-1kcrdz9"
          >
            <div
              className="css-p0qa9v"
            >
              <img
                alt=""
                className="css-1e33sef"
              />
            </div>
            <div
              className="css-1ezsse0"
            >
              <h3
                className="css-1xf94ta"
              >
                <strong>
                  Think, Act, Stay Safe with the R.E.A.C.T Approach to Self Defence
                </strong>
              </h3>
              <p
                className="css-5k86z4"
              >
                Stephen W. Collins
              </p>
            </div>
          </div>
        </li>
      </ul>
    </div>
  </main>
</div>
`;

exports[`Storyshots BooksPage Loading 1`] = `
<div
  className="css-1h5u2ui"
>
  <div
    className="css-jfx3a"
  >
    <a
      className="css-1iuyfm8"
    >
      favbook
    </a>
    <div
      className="css-47wyri"
    >
      <form
        className="css-kjafn5"
        onSubmit={[Function]}
      >
        <input
          className="css-1ohh5ys"
          onChange={[Function]}
          placeholder="Search"
        />
        <div
          className="css-mczi6p"
        >
          <button
            aria-label="Search"
            className="css-12ol5rm"
            type="submit"
          >
            <svg
              aria-hidden={true}
              className="css-1im46kq"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M23.384,21.619,16.855,15.09a9.284,9.284,0,1,0-1.768,1.768l6.529,6.529a1.266,1.266,0,0,0,1.768,0A1.251,1.251,0,0,0,23.384,21.619ZM2.75,9.5a6.75,6.75,0,1,1,6.75,6.75A6.758,6.758,0,0,1,2.75,9.5Z"
                fill="currentColor"
              />
            </svg>
          </button>
        </div>
      </form>
    </div>
  </div>
  <main
    className="css-0"
  >
    <div
      className="css-ps5qvu"
    >
      <ul
        className="css-1ejed6n"
      />
      <ul
        className="css-1ejed6n"
        data-testid="book-loading"
      >
        <li
          className="css-1bv9c6y"
        >
          <div
            className="css-1kcrdz9"
          >
            <div
              className="css-p0qa9v"
            />
            <div
              className="css-1ezsse0"
            >
              <div
                className="css-1kppp1y"
              />
              <div
                className="css-g7qeeo"
              />
              <div
                className="css-g7qeeo"
              />
            </div>
          </div>
        </li>
        <li
          className="css-1bv9c6y"
        >
          <div
            className="css-1kcrdz9"
          >
            <div
              className="css-p0qa9v"
            />
            <div
              className="css-1ezsse0"
            >
              <div
                className="css-1kppp1y"
              />
              <div
                className="css-g7qeeo"
              />
              <div
                className="css-g7qeeo"
              />
            </div>
          </div>
        </li>
        <li
          className="css-1bv9c6y"
        >
          <div
            className="css-1kcrdz9"
          >
            <div
              className="css-p0qa9v"
            />
            <div
              className="css-1ezsse0"
            >
              <div
                className="css-1kppp1y"
              />
              <div
                className="css-g7qeeo"
              />
              <div
                className="css-g7qeeo"
              />
            </div>
          </div>
        </li>
        <li
          className="css-1bv9c6y"
        >
          <div
            className="css-1kcrdz9"
          >
            <div
              className="css-p0qa9v"
            />
            <div
              className="css-1ezsse0"
            >
              <div
                className="css-1kppp1y"
              />
              <div
                className="css-g7qeeo"
              />
              <div
                className="css-g7qeeo"
              />
            </div>
          </div>
        </li>
        <li
          className="css-1bv9c6y"
        >
          <div
            className="css-1kcrdz9"
          >
            <div
              className="css-p0qa9v"
            />
            <div
              className="css-1ezsse0"
            >
              <div
                className="css-1kppp1y"
              />
              <div
                className="css-g7qeeo"
              />
              <div
                className="css-g7qeeo"
              />
            </div>
          </div>
        </li>
        <li
          className="css-1bv9c6y"
        >
          <div
            className="css-1kcrdz9"
          >
            <div
              className="css-p0qa9v"
            />
            <div
              className="css-1ezsse0"
            >
              <div
                className="css-1kppp1y"
              />
              <div
                className="css-g7qeeo"
              />
              <div
                className="css-g7qeeo"
              />
            </div>
          </div>
        </li>
        <li
          className="css-1bv9c6y"
        >
          <div
            className="css-1kcrdz9"
          >
            <div
              className="css-p0qa9v"
            />
            <div
              className="css-1ezsse0"
            >
              <div
                className="css-1kppp1y"
              />
              <div
                className="css-g7qeeo"
              />
              <div
                className="css-g7qeeo"
              />
            </div>
          </div>
        </li>
        <li
          className="css-1bv9c6y"
        >
          <div
            className="css-1kcrdz9"
          >
            <div
              className="css-p0qa9v"
            />
            <div
              className="css-1ezsse0"
            >
              <div
                className="css-1kppp1y"
              />
              <div
                className="css-g7qeeo"
              />
              <div
                className="css-g7qeeo"
              />
            </div>
          </div>
        </li>
        <li
          className="css-1bv9c6y"
        >
          <div
            className="css-1kcrdz9"
          >
            <div
              className="css-p0qa9v"
            />
            <div
              className="css-1ezsse0"
            >
              <div
                className="css-1kppp1y"
              />
              <div
                className="css-g7qeeo"
              />
              <div
                className="css-g7qeeo"
              />
            </div>
          </div>
        </li>
        <li
          className="css-1bv9c6y"
        >
          <div
            className="css-1kcrdz9"
          >
            <div
              className="css-p0qa9v"
            />
            <div
              className="css-1ezsse0"
            >
              <div
                className="css-1kppp1y"
              />
              <div
                className="css-g7qeeo"
              />
              <div
                className="css-g7qeeo"
              />
            </div>
          </div>
        </li>
        <li
          className="css-1bv9c6y"
        >
          <div
            className="css-1kcrdz9"
          >
            <div
              className="css-p0qa9v"
            />
            <div
              className="css-1ezsse0"
            >
              <div
                className="css-1kppp1y"
              />
              <div
                className="css-g7qeeo"
              />
              <div
                className="css-g7qeeo"
              />
            </div>
          </div>
        </li>
        <li
          className="css-1bv9c6y"
        >
          <div
            className="css-1kcrdz9"
          >
            <div
              className="css-p0qa9v"
            />
            <div
              className="css-1ezsse0"
            >
              <div
                className="css-1kppp1y"
              />
              <div
                className="css-g7qeeo"
              />
              <div
                className="css-g7qeeo"
              />
            </div>
          </div>
        </li>
      </ul>
    </div>
  </main>
</div>
`;

exports[`Storyshots BooksPage No Results 1`] = `
<div
  className="css-1h5u2ui"
>
  <div
    className="css-jfx3a"
  >
    <a
      className="css-1iuyfm8"
    >
      favbook
    </a>
    <div
      className="css-47wyri"
    >
      <form
        className="css-kjafn5"
        onSubmit={[Function]}
      >
        <input
          className="css-1ohh5ys"
          onChange={[Function]}
          placeholder="Search"
        />
        <div
          className="css-mczi6p"
        >
          <button
            aria-label="Search"
            className="css-12ol5rm"
            type="submit"
          >
            <svg
              aria-hidden={true}
              className="css-1im46kq"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M23.384,21.619,16.855,15.09a9.284,9.284,0,1,0-1.768,1.768l6.529,6.529a1.266,1.266,0,0,0,1.768,0A1.251,1.251,0,0,0,23.384,21.619ZM2.75,9.5a6.75,6.75,0,1,1,6.75,6.75A6.758,6.758,0,0,1,2.75,9.5Z"
                fill="currentColor"
              />
            </svg>
          </button>
        </div>
      </form>
    </div>
  </div>
  <main
    className="css-0"
  >
    <div
      className="css-ps5qvu"
    >
      <ul
        className="css-1ejed6n"
      />
      <div
        className="css-1r0j3tx"
      >
        <img
          alt=""
          className="css-17jw62r"
        />
        <h2
          className="css-14roqmd"
        >
          Books not found!
        </h2>
        <p
          className="css-5k86z4"
        >
          No results containing all your search terms were found. Please try another keywords.
        </p>
      </div>
    </div>
  </main>
</div>
`;

exports[`Storyshots SearchForm Default 1`] = `
<form
  className="css-kjafn5"
  onSubmit={[Function]}
>
  <input
    className="css-1ohh5ys"
    onChange={[Function]}
    placeholder="Search"
  />
  <div
    className="css-mczi6p"
  >
    <button
      aria-label="Search"
      className="css-12ol5rm"
      type="submit"
    >
      <svg
        aria-hidden={true}
        className="css-1im46kq"
        focusable="false"
        role="presentation"
        viewBox="0 0 24 24"
      >
        <path
          d="M23.384,21.619,16.855,15.09a9.284,9.284,0,1,0-1.768,1.768l6.529,6.529a1.266,1.266,0,0,0,1.768,0A1.251,1.251,0,0,0,23.384,21.619ZM2.75,9.5a6.75,6.75,0,1,1,6.75,6.75A6.758,6.758,0,0,1,2.75,9.5Z"
          fill="currentColor"
        />
      </svg>
    </button>
  </div>
</form>
`;
